# project-management-ai

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-compose.yml  ci-python.yml  ci-web.yml  security-scan.yml
docs/: IMPLEMENTATION_STATE.md  gguf-awq-conversion.md  kb-embedding-switch.md  license-ledger.md  local-verification-checklist.md  logging-conventions.md  operations-policy.md  setup-tier-l.md  takumi-guard.md
kb/: CORPUS_LICENSE_CHECKLIST.md
kb/tests/: test_corpus_frontmatter.py
scripts/: backup.sh  backup_restore_lib.py  check_agent_core_isolation.py  generate_bench_questions.py  restore.sh  switch_backend_check.sh  switch_embedding_model_check.py  switch_embedding_model_check.sh  verify_registry_guard.py
scripts/bootstrap_issues/: create_issues.py  issues.yaml
scripts/seed_sample_product/: seed.py
scripts/tests/: test_backup_restore.py  test_check_agent_core_isolation.py  test_compose_healthcheck_definitions.py  test_logging_conventions.py  test_security_scan_workflow.py  test_seed_sample_product.py  test_switch_embedding_model_check.py  test_verify_registry_guard.py
services/agent-core/: Dockerfile  README.md  pyproject.toml
services/agent-core/src/agent_core/: __main__.py  chat.py  evidence.py  feedback_loop.py  guards.py  health_server.py  llm_client.py  logging.py  runner.py  task_queue.py
services/agent-core/src/agent_core/graphs/: backlog.py  discovery_experiment_stakeholder_initiative.py  kpi_dr_review.py  vision_roadmap_release.py
services/agent-core/src/agent_core/learning/: __init__.py  anonymize.py  dataset_builder.py  evaluate.py  execute.py  feedback_ingest.py  synthesize.py
services/agent-core/src/agent_core/tools/: pmdf_tools.py  rag_tool.py
services/agent-core/tests/: test_backlog_graph.py  test_chat.py  test_discovery_experiment_stakeholder_initiative_graph.py  test_evidence.py  test_feedback_loop.py  test_guards.py  test_kpi_dr_review_graph.py  test_learning_dataset.py  test_learning_evaluate.py  test_learning_execute.py  test_learning_synthesize.py  test_llm_client.py  test_pmdf_tools.py  test_rag_tool.py  test_runner.py  test_task_queue.py  test_vision_roadmap_release_graph.py
services/agent-core/tests/fixtures/: feedback_queue_sample.jsonl
services/api-server/: Dockerfile  README.md  pyproject.toml
services/api-server/src/api_server/: __init__.py  config.py  deps.py  exceptions.py  logging.py  main.py
services/api-server/src/api_server/approval/: __init__.py  gate.py  proposal_store.py  state_machine.py
services/api-server/src/api_server/audit/: __init__.py  log.py
services/api-server/src/api_server/auth/: __init__.py  dependencies.py  jwt.py  models.py  password.py  totp.py  user_store.py
services/api-server/src/api_server/autonomy/: __init__.py  config.py  emergency_stop.py
services/api-server/src/api_server/chat/: __init__.py  state_machine.py  task_store.py
services/api-server/src/api_server/costs/: __init__.py  budget.py  budget_state.py  usage_store.py
services/api-server/src/api_server/events/: __init__.py  bus.py
services/api-server/src/api_server/learning/: __init__.py  status_store.py
services/api-server/src/api_server/pmdf_store/: __init__.py  lock.py  store.py
services/api-server/src/api_server/routers/: admin.py  approvals.py  audit.py  auth.py  autonomy.py  bundles.py  chat.py  costs.py  health.py  l1_execution.py  learning.py  pmdf.py  ws.py
services/api-server/tests/: factories.py  test_approval_gate_bypass.py  test_approval_state_machine.py  test_approvals_router.py  test_audit_log.py  test_audit_router.py  test_auth_jwt.py  test_auth_password.py  test_auth_router.py  test_auth_totp.py  test_autonomy_config.py  test_autonomy_router.py  test_budget_state.py  test_bundles_router.py  test_chat_router.py  test_config.py  test_costs_budget.py  test_costs_router.py  test_costs_usage_store.py  test_emergency_stop.py  test_event_bus.py  test_exceptions.py  test_health.py  test_learning_router.py  test_learning_status_store.py  test_pmdf_router.py  test_pmdf_store.py  test_product_scope.py  test_ws_events.py
services/eval-runner/: Dockerfile  README.md  pyproject.toml
services/eval-runner/bench/: artifact_generation.yaml  general_regression.yaml  pdm_knowledge.yaml  pmdf_accuracy.yaml  priority_judgment.yaml  product_project_distinction.yaml
services/eval-runner/src/eval_runner/: __init__.py  bench_schema.py  cli.py  compare.py  deploy_hook.py
services/eval-runner/tests/: test_bench_content_quality.py  test_eval_runner.py  test_eval_runner_learning_status.py
services/kb-ingest/: README.md  pyproject.toml
services/kb-ingest/src/kb_ingest/: __init__.py  chunking.py  cli.py  embedding.py  frontmatter.py  pmdf_indexer.py  qdrant_store.py
services/kb-ingest/tests/: test_chunking.py  test_embedding.py  test_embedding_switch.py  test_frontmatter.py  test_ingest_cli.py  test_pmdf_indexer.py  test_pmdf_indexer_integration.py  test_qdrant_store.py
services/model-gateway/: Dockerfile  README.md  docker-entrypoint.sh  litellm.config.yaml  pyproject.toml
services/model-gateway/src/model_gateway/: __init__.py  config.py  router.py
services/model-gateway/tests/: _run_entrypoint_probe.sh  mock_openai_compatible_server.py  test_active_backend_entrypoint.py  test_config_structure.py  test_fallback.py  test_routing.py
services/pmdf-store/: Dockerfile  docker-entrypoint.sh
services/scheduler/: Dockerfile  README.md  pyproject.toml
services/scheduler/src/scheduler/: __init__.py  __main__.py  budget_monitor.py  config.py  health.py  jobs.py  logging_config.py  main.py
services/scheduler/tests/: test_budget_monitor.py  test_jobs.py
services/trainer/: Dockerfile  README.md  pyproject.toml
services/trainer/src/trainer/: __init__.py  bnb_adapter.py  config.py  dpo.py  sft.py
services/trainer/tests/: test_checkpoint_resume.py  test_config.py  test_dpo_smoke.py  test_sft_smoke.py  test_trainer_learning_status.py
services/web-ui/: Dockerfile  index.html  (+7 more)
(+138 files in other folders)
