[project]
name = "project-management-ai"
version = "0.1.0"
description = "PdM AI 実装プロジェクト ルートワークスペース"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pmdf"]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
pmdf = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["scripts/bootstrap_issues"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["scripts/bootstrap_issues"]

[tool.uv]
package = false
