[project]
name = "project-management-ai"
version = "0.1.0"
description = "PdM AI 実装プロジェクト ルートワークスペース"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pmdf"]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
pmdf = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["scripts/bootstrap_issues"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typerの規約上、デフォルト引数でtyper.Option()/typer.Argument()を呼ぶ必要があり、
# B008(関数呼び出しをデフォルト引数にしない)は本ファイルでは意図的に無視する。
"packages/pmdf/src/pmdf/cli.py" = ["B008"]
# FastAPIの規約上、デフォルト引数でDepends()を呼ぶ必要があり、
# B008は本ディレクトリ(APIルータ・依存性注入関数)では意図的に無視する。
"services/api-server/src/api_server/**" = ["B008"]
# typerの規約上、デフォルト引数でtyper.Option()/typer.Argument()を呼ぶ必要があり、
# B008は本ファイルでは意図的に無視する。
"services/kb-ingest/src/kb_ingest/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["scripts/bootstrap_issues"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["packages", "services", "scripts/tests"]
asyncio_mode = "auto"
