[project]
name = "api-server"
version = "0.1.0"
description = "PMDF永続化(pmdf-store)とAPIを提供するapi-serverサービス"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pmdf",
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.12.0",
    "structlog>=25.1.0",
    "python-multipart>=0.0.20",
    "gitpython>=3.1.45",
    "filelock>=3.20.0",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.11.0",
    "pyotp>=2.9.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
