[project]
name = "kb-ingest"
version = "0.1.0"
description = "KB(知識ベース)コーパスのfront-matter検証・チャンク分割・埋め込み・Qdrant投入を行うkb-ingestサービス"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
    "typer>=0.26.8",
    "httpx>=0.28.1",
    "qdrant-client>=1.15.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    # E6-3のPMDFインデクサ結合テスト(api-serverの実WebSocketイベント・
    # 実REST APIと組み合わせた検証)でのみ使用するテスト専用依存。
    "api-server",
]

[tool.uv.sources]
api-server = { workspace = true }

[project.scripts]
kb-ingest = "kb_ingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_ingest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
