[project]
name = "model-gateway"
version = "0.1.0"
description = "LiteLLM Proxy設定と検証テストを提供するmodel-gatewayサービス"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
