[project]
name = "scheduler"
version = "0.1.0"
description = "定常業務オーケストレーション用スケジューラ(E4-4 スケルトン、E9-1 で本実装)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "httpx>=0.28.1",
    "agent-core",
    "eval-runner",
    "trainer",
]

[tool.uv.sources]
agent-core = { workspace = true }
eval-runner = { workspace = true }
trainer = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
