[project]
name = "trainer"
version = "0.1.0"
description = "QLoRA SFT/DPO トレーナー(E8-7)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "mlflow>=2.18.0",
    "peft>=0.14.0",
    "pydantic>=2.13.4",
    "torch>=2.13.0",
    "transformers>=4.48.0",
    "trl>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
trainer-sft = "trainer.sft:main"
trainer-dpo = "trainer.dpo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trainer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
